--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,6 @@
 ---
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import '../styles/global.css';
+import BaseLayout from '../layouts/BaseLayout.astro';
+const pageTitle = 'My Astro Learning Blog';
 ---
 
 <html lang="en">
@@ -13,18 +12,13 @@ import '../styles/global.css';
 		<title>Astro</title>
 	</head>
 	<body>
-		<Header />
-
-		<h1>My Astro Learning Blog</h1>
-    <p>This is where I will post about my journey learning Astro.</p>
-		<ul>
-			<li><a href="/posts/post-1/">Post 1</a></li>
-			<li><a href="/posts/post-2/">Post 2</a></li>
-			<li><a href="/posts/post-3/">Post 3</a></li>
-		</ul>
-		<Footer />
-		<script>
-			import '../scripts/menu.js'
-		</script>
+		<BaseLayout pageTitle={ pageTitle }>
+			<p>This is where I will post about my journey learning Astro.</p>
+			<ul>
+				<li><a href="/posts/post-1/">Post 1</a></li>
+				<li><a href="/posts/post-2/">Post 2</a></li>
+				<li><a href="/posts/post-3/">Post 3</a></li>
+			</ul>
+		</BaseLayout>
 	</body>
 </html>
