--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,23 +1,20 @@
 ---
-import BaseLayout from './BaseLayout.astro';
-const { frontmatter } = Astro.props;
+import BaseLayout from '../../layouts/BaseLayout.astro';
+const pageTitle = 'Tag index';
+const allPosts = await Astro.glob('../posts/*.md');
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 ---
 
-<BaseLayout pageTitle={frontmatter.title}>
-  <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
-  <p>Written by {frontmatter.author}</p>
-  <img src={frontmatter.image.url} alt={frontmatter.image.alt} width="500" />
-  <p>{frontmatter.description}</p>
+<BaseLayout pageTitle={pageTitle}>
   <div class="tags">
     {
-      frontmatter.tags.map((tag) => (
+      tags.map((tag) => (
         <p class="tag">
           <a href={`/tags/${tag}`}>{tag}</a>
         </p>
       ))
     }
   </div>
-  <slot />
 </BaseLayout>
 <style>
   a {
